changed trim().isEmpty() to isBlank() in class Resume in method setSections. Rename method setSections to setSection